# mm-matrixmultiplicationtool

./: ProjectHome.md  cpuid.c
mm-0.1/: Makefile.in  configure
mm-0.1/doc/: Makefile.am  Makefile.in  blass.csv  block.csv  cblasm.csv  cblass.csv  mm.tex  mpi-1.csv  timings.csv
mm-0.1/src/: Makefile.in  main.c
mm-0.1/t/: 001_return.sh  002_usage.sh  005_unknown_method.sh  008_check_transp.sh  009_check_cblas.sh  010_check_mpi_single.sh  012_check_block.sh
trunk/mm-0.1/: Makefile.am  configure.ac
trunk/mm-0.1/doc/: blasm.csv  blocksize.csv  cblas.csv  mm.bib  mm.gp  mpi.csv  simple.csv  transp.csv
trunk/mm-0.1/inc/: Makefile.in
trunk/mm-0.1/src/: Makefile.am  config.h.in  mm.c  mm.h  utils.h
trunk/mm-0.1/t/: 003_unknown_method.sh  004_usage.sh  006_check.sh  007_invalid_size.sh  011_check_mpi_multi.sh  Makefile.in
